[FIX] avoid flickering

--- a/addons/pos_self_order/static/src/kiosk/self_order_kiosk_index.scss
+++ b/addons/pos_self_order/static/src/kiosk/self_order_kiosk_index.scss
@@ -38,6 +38,10 @@ body {
   aspect-ratio: 1/1;
 }
 
+.o_kiosk_tab_numbers {
+  font-variant: tabular-nums;
+}
+
 /* Custom styling for .btn-primary to reflect company settings colors */
 
 .btn-primary {
